# EmuForge-Experimental-3DS-Emulation-Core

./: .gitignore  ARCHITECTURE.md  BUILD.md  CMakeLists.txt  CONTRIBUTING.md  INITIALIZATION_SUMMARY.md  PROBLEM_STATEMENT.md  PROJECT_OVERVIEW.txt  QUICKSTART.md  README.md  VERIFICATION_RESULTS.txt
include/: cpu_base.hpp
src/cpu/: arm11.cpp  arm11.hpp  arm9.cpp  arm9.hpp
src/gpu/: gpu_stub.cpp
src/io/: io_stub.cpp
src/loader/: loader_stub.cpp
src/memory/: memory_stub.cpp
src/os/: kernel_stub.cpp
tests/: test_cpu.cpp
